--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-awc = "3"
+awc = { version = "3", features = ["rustls"] }
 actix = "0.13.0"
 actix-web = { version = "4", features = ["rustls"] }
 actix-web-actors = "4.1.0"
@@ -25,3 +25,4 @@ url = "2.2"
 jsonwebtoken = "8"
 serde = {version = "1.0", features = ["derive"] }
 config = "0.10"
+regex = "1"
