--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,12 +6,15 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-awc = { version = "3", features = ["rustls"] }
-actix = "0.13.0"
-actix-web = { version = "4", features = ["rustls"] }
-actix-web-actors = "4.1.0"
+axum = "0.5"
+axum-server = { version = "0.4.2", features = ["tls-rustls"] }
+tokio = { version = "1", features = ["full"] }
+hyper = { version = "0.14", features = ["full"] }
+tower = "0.4.13"
+futures = "0.3"
+hyper-rustls = "0.23.0"
+
 parking_lot = "0.12.1"
-tokio = { version = "1.21.1", features = ["full"] }
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 quinn = "0.8.5"
@@ -21,8 +24,10 @@ futures-util = "0.3.24"
 anyhow = "1.0.65"
 rcgen = "0.9.3"
 uuid = { version = "1.1.2", features = ["v4", "fast-rng"] }
-url = "2.2"
+# url = "2.2"
 jsonwebtoken = "8"
 serde = {version = "1.0", features = ["derive"] }
+serde_json = "1.0"
 config = "0.10"
-regex = "1"
+abort-on-drop = "0.2.2"
+regex = "1.6.0"
