Add proper reverse-proxy.
I was trying to get websockets to work over stormgrok and learned
quite a bunch about reverse proxies.. There is particular headers
called the hop-by-hop headers which should be stripped. Connection
upgrade requests should _not_ be forwarded to clients unless it's
a websocket upgrade request or the server thinks it's a good idea..
:shrug: aand the Forwarded header should be populated with data.

This seemed like a lot work and I found a package that does it..
Problem is that it's old, poorly maintained, ws support came in
recently but is not yet on crates it uses the X-Forwaded header
instead of the proper Forwaded header and its 350 lines instead of
the 10 I currently use.. But, ya know, it does actually work.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+hyper-reverse-proxy = { git = "https://github.com/felipenoris/hyper-reverse-proxy", rev = "e73a76600ce9e51e962de5266b03be596e6c1d50" }
 axum = "0.5"
 axum-server = { version = "0.4.2", features = ["tls-rustls"] }
 tokio = { version = "1", features = ["full"] }
